# phisher_phinder_rust

./: .env.example  .env.test.example  .gitignore  Cargo.toml  LICENSE  README.md  analyser_wrapper.sh  docker-compose.yml
src/: analysable_message.rs  analyser.rs  authentication_results.rs  cli.rs  data.rs  enumerator.rs  errors.rs  lib.rs  mail_trap.rs  mailer.rs  mbox.rs  message_source.rs  mountebank.rs  notification.rs  outgoing_email.rs  persistence.rs  populator.rs  reporter.rs  result.rs  run.rs  run_presenter.rs  service.rs  service_configuration.rs  sources.rs  ui.rs
src/service/: config.rs  mod.rs  process_message.rs
src/service/process_message/: analysis.rs  configuration.rs  mail.rs  message_source.rs  persistence.rs
tests/: integration_tests.rs  mailer_integration_tests.rs  parser_integration_tests.rs  rdap_integration_tests.rs  reporter_integration_tests.rs  url_enumerator_integration_tests.rs
tests/integration/: fetch_run_details_tests.rs  find_other_runs_tests.rs  mailer_integration_tests.rs  main.rs  mbox_parsing_integration_tests.rs  message_source_persistence_integration_tests.rs  omni_binary_config_tests.rs  omni_binary_tests.rs  parser_integration_tests.rs  random_sample_integration_tests.rs  rdap_integration_tests.rs  reporter_integration_tests.rs  run_persistence_integration_tests.rs  source_parsing_integration_tests.rs  source_splitter_integration_tests.rs  store_mail_source_integration_tests.rs  url_enumerator_integration_tests.rs
tests/mountebank/: mod.rs
