[package]
name = "phisher_phinder_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.7", features = ["derive"] }
mail-parser = "0.7.0"
prettytable-rs = "0.9.0"
rdap_client = { path="/home/rory/data/git/rdap_client/rdap_client", version="0.3.0" }
serde_json = "1.0.87"
thiserror = "1.0.37"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
