[features]
test-mocks = []

[package]
name = "phisher_phinder_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive"] }
lettre = { version = "0.11.3", features = ["builder", "tokio1", "tokio1-native-tls"] }
mail-builder = "0.2.4"
mail-parser = "0.8.1"
mail-send = "0.3.3"
prettytable-rs = "0.10.0"
rand = "0.8.5"
test_friendly_rdap_client = "0.1.0"
regex = "1.7.0"
reqwest = { version = "0.11.12", features = ["blocking"] }
scraper = "0.14.0"
serde = "1.0.147"
serde_json = "1.0.87"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
tokio-test = "0.4.2"
url = "2.3.1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
assert_fs = "1.0.13"
fallible-streaming-iterator = "0.1.9"
predicates = "2.1.1"
sha2 = "0.10.7"
confy = "0.6.1"

[dev-dependencies]
assert-json-diff = "2.0.2"
assert_cmd = "2.0.4"
predicates = "2.1.1"
